--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro'
-import ClassBuilder from '@/css-summoner/ClassBuilder.jsx'
+import ClassBuilder from '@ui/ClassBuilder.jsx'
 import Menu from '@layouts/Menu.astro'
 ---
 
