--- a/src/css-summoner/ui/layouts/Footer.astro
+++ b/src/css-summoner/ui/layouts/Footer.astro
@@ -1,1 +1,26 @@
-<footer>footer-aria</footer>
+<footer class='py-4 text-center text-neutral-500 bg-neutral'>
+	<div class='mb-2'>© c-studio</div>
+	<div class='space-x-4'>
+		<a
+			href='https://github.com/llama2f/css-summoner'
+			target='_blank'
+			rel='noopener noreferrer'
+			tabindex='0'
+			class='hover:text-neutral-700'>GitHub</a
+		>
+		<a
+			href='https://x.com/web_cstudio'
+			target='_blank'
+			rel='noopener noreferrer'
+			tabindex='0'
+			class='hover:text-neutral-700'>X(Twitter)</a
+		>
+		<a
+			href='https://c-std.com'
+			target='_blank'
+			rel='noopener noreferrer'
+			tabindex='0'
+			class='hover:text-neutral-700'>Web</a
+		>
+	</div>
+</footer>
