--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import siteData from '@configs/siteData.json'
 			</p>
 		</div>
 
-		<div class='rounded-lg shadow-sm p-6'>
+		<div class='rounded-lg shadow-sm'>
 			<ClassBuilder client:load />
 		</div>
 
