astroコンポーネント修正

--- a/src/css-summoner/ui/layouts/Layout.astro
+++ b/src/css-summoner/ui/layouts/Layout.astro
@@ -16,7 +16,7 @@ export interface Props {
 const { title = siteData.siteName, desc = siteData.siteDescription } =
 	Astro.props
 
-const mainClass = 'container mx-auto px-global max-w-screen-2xl'
+const mainClass = 'container mx-auto px-global py-global max-w-screen-2xl'
 ---
 
 <html lang='ja'>
