--- a/src/css-summoner/styles/builder.css
+++ b/src/css-summoner/styles/builder.css
@@ -45,12 +45,22 @@
 
 	/* パネル */
 	.panel {
-		@apply lg:col-span-2 space-y-4 p-3 rounded-lg;
+		@apply lg:col-span-2 space-y-4 lg:p-3 rounded-lg;
 	}
 
 	.panel-preview {
-		@apply lg:col-span-6  lg:sticky lg:top-[2rem];
-		@apply space-y-4 self-start;
+		@apply lg:order-2 lg:col-span-6  lg:sticky lg:top-[2rem];
+		@apply order-none space-y-4 self-start;
+	}
+
+	.panel-settings {
+		@apply lg:order-1;
+		@apply order-2;
+	}
+
+	.panel-components {
+		@apply lg:order-none;
+		@apply order-1;
 	}
 
 	/* セレクタークラス */
@@ -205,7 +215,7 @@
 			border-color 0.2s ease-in-out,
 			background-color 0.2s ease-in-out;
 
-		@apply text-sm font-bold bg-neutral-400/20 text-neutral-dark w-full flex justify-between items-center p-2 transition-colors text-left;
+		@apply text-sm font-bold bg-neutral-400/20 text-neutral-dark dark:text-neutral-light w-full flex justify-between items-center p-2 transition-colors text-left;
 	}
 
 	.category-header:hover {
