--- a/src/css-summoner/ui/layouts/Menu.astro
+++ b/src/css-summoner/ui/layouts/Menu.astro
@@ -24,7 +24,7 @@ const menuItems = pages.filter(
 )
 ---
 
-<h3 class='text-lg font-bold mb-2'>Component Docs</h3>
+<h3 class='text-base font-bold'>Component Docs</h3>
 <nav class='docs-menu'>
 	<ul class='flex flex-wrap gap-2'>
 		{
@@ -36,7 +36,7 @@ const menuItems = pages.filter(
 					<li>
 						<a
 							href={item.url}
-							class='badge-base badge-outline badge-xs shadow color-primary animate-down tran-200 no-default'
+							class='badge-base badge-outline badge-xs shadow color-dark animate-down tran-200 no-default'
 						>
 							{fileName}
 						</a>
@@ -47,7 +47,8 @@ const menuItems = pages.filter(
 	</ul>
 	<style>
 		.docs-menu {
-			padding: 1rem;
+			padding-bottom: 0.5rem;
+			padding-top: 0.5rem;
 		}
 
 		.docs-menu ul {
