--- a/src/css-summoner/ui/layouts/Footer.astro
+++ b/src/css-summoner/ui/layouts/Footer.astro
@@ -1,4 +1,4 @@
-<footer class='py-4 text-center text-neutral-500 bg-neutral'>
+<footer class='pt-4 pb-24 text-center text-neutral-500 bg-neutral'>
 	<div class='mb-2'>© c-studio</div>
 	<div class='space-x-4'>
 		<a
