--- a/src/css-summoner/ui/layouts/Header.astro
+++ b/src/css-summoner/ui/layouts/Header.astro
@@ -8,6 +8,6 @@ const { title = siteData.siteName } = Astro.props
 <header
 	class='flex items-center justify-between sticky top-0 z-50 p-4 text-neutral bg-neutral-dark'
 >
-	<h1 class='text-xl font-bold'>{title}</h1>
+	<h1 class='text-xl font-bold text-neutral-100'>{title}</h1>
 	<ThemeSwitcher />
 </header>
